--- a/AI_project.ipynb
+++ b/AI_project.ipynb
@@ -918,11 +918,11 @@
       ],
       "metadata": {
         "id": "iSSjZvvRCUR8",
-        "outputId": "b7b9e025-59f3-40e9-f1dd-4af15a93aee5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 767
-        }
+        },
+        "outputId": "b7b9e025-59f3-40e9-f1dd-4af15a93aee5"
       },
       "execution_count": 12,
       "outputs": [
@@ -1203,7 +1203,6 @@
       "source": [
         "# Train the model\n",
         "epochs = 5 # Number of times to train data\n",
-        "print(labels)\n",
         "for e in range(epochs):\n",
         "    for features, labels in trainloader:\n",
         "        optimizer.zero_grad() # set optimizer gradients to zero:\n",
@@ -1214,10 +1213,68 @@
         "    print(loss.item()) # print loss for each epoch"
       ],
       "metadata": {
-        "id": "ad_bUQQMr-ld"
+        "id": "ad_bUQQMr-ld",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c75367cd-5b30-456e-db1d-6e37076b7013"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([22,  6, 15,  ..., 12, 14, 18])\n",
+            "1.0003232955932617\n",
+            "0.7802854776382446\n",
+            "0.6093107461929321\n",
+            "0.4562092423439026\n",
+            "0.3540043532848358\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "pLlZ9wtG-SCC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test phase\n",
+        "with torch.no_grad():\n",
+        "    correct = 0\n",
+        "    total = 0\n",
+        "    for features, labels in testloader:\n",
+        "        outputs = NN(features)\n",
+        "        _, predicted = torch.max(outputs.data, 1)\n",
+        "        total += labels.size(0)\n",
+        "        correct += (predicted == labels).sum()\n",
+        "\n",
+        "    print('Accuracy of the model on the test images: {} %'\n",
+        "          .format(100.0 * correct / total))"
+      ],
+      "metadata": {
+        "id": "jbnZdOC5-QuL",
+        "outputId": "4e4b4a7f-4bbe-4ec6-adda-fb914978f5a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy of the model on the test images: 83.36538696289062 %\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
