Creato con Colaboratory

--- a/AI_project.ipynb
+++ b/AI_project.ipynb
@@ -30,7 +30,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "NLSwyNFwHXUQ",
-        "outputId": "9f3ba2b3-6fcd-4dae-f4ee-10be9c9c3885",
+        "outputId": "e7c2b1b5-323d-4998-8f96-06cec019dfac",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -40,10 +40,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m24.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m21.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting torchmetrics\n",
-            "  Downloading torchmetrics-1.1.2-py3-none-any.whl (764 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m764.8/764.8 kB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "  Downloading torchmetrics-1.2.0-py3-none-any.whl (805 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m805.2/805.2 kB\u001b[0m \u001b[31m11.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy>1.20.0 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (1.23.5)\n",
             "Requirement already satisfied: torch>=1.8.1 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (2.0.1+cu118)\n",
             "Collecting lightning-utilities>=0.8.0 (from torchmetrics)\n",
@@ -60,7 +60,7 @@
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch>=1.8.1->torchmetrics) (2.1.3)\n",
             "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch>=1.8.1->torchmetrics) (1.3.0)\n",
             "Installing collected packages: lightning-utilities, torchmetrics\n",
-            "Successfully installed lightning-utilities-0.9.0 torchmetrics-1.1.2\n"
+            "Successfully installed lightning-utilities-0.9.0 torchmetrics-1.2.0\n"
           ]
         }
       ],
@@ -155,16 +155,31 @@
         "id": "PZG8udJCP8HY",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 475
         },
-        "outputId": "13bbd3a1-022f-45c4-cf93-b729e5c0fff1"
+        "outputId": "46d00eb8-e672-425f-8413-d6fa1a121898"
       },
-      "execution_count": 23,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Downloading https://www.itl.nist.gov/iaui/vip/cs_links/EMNIST/gzip.zip to data/EMNIST/raw/gzip.zip\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 561753746/561753746 [00:05<00:00, 108564889.12it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting data/EMNIST/raw/gzip.zip to data/EMNIST/raw\n",
             "['N/A', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n"
           ]
         },
@@ -199,125 +214,26 @@
       ],
       "metadata": {
         "id": "tNqiXFct9jI_",
-        "outputId": "bbc672d1-8c44-43e2-e703-ab8dd00a10d1",
+        "outputId": "8c4cd592-45ba-4539-fa73-a0aacf2bf978",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 36
         }
       },
       "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "tensor([[[0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         ...,\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0]],\n",
-            "\n",
-            "        [[0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         ...,\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0]],\n",
-            "\n",
-            "        [[0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         ...,\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0]],\n",
-            "\n",
-            "        ...,\n",
-            "\n",
-            "        [[0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         ...,\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0]],\n",
-            "\n",
-            "        [[0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         ...,\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0]],\n",
-            "\n",
-            "        [[0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         ...,\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0],\n",
-            "         [0, 0, 0,  ..., 0, 0, 0]]])\n",
-            "torch.Size([124800, 28, 28])\n",
-            "tensor([[  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-            "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,   0,   3,   4,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-            "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  20, 109, 114,  45,   0,   0,   0,   0,   0,   0,   0,\n",
-            "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0, 114, 245, 253, 214,   5,   0,   0,   0,   0,   0,  20,\n",
-            "         100,  33,   1,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0, 125, 249, 254, 233,  22,   0,   0,   0,   0,  10, 123,\n",
-            "         238, 163,  33,   0,   0,   0,   0,   2,   4,   4,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  82, 233, 254, 251,  82,   2,   0,   0,   3,  79, 220,\n",
-            "         254, 244, 126,   0,   0,   0,   3,  77, 125, 113,   8,   0,   0,   0],\n",
-            "        [  0,   0,   0,  37, 217, 254, 254, 128,   5,   0,   0,  34, 204, 254,\n",
-            "         255, 254, 216,   5,   0,  22, 154, 247, 254, 253, 111,   3,   0,   0],\n",
-            "        [  0,   0,   0,  37, 217, 254, 254, 160,  16,   0,   3,  84, 233, 254,\n",
-            "         255, 254, 233,  22,  10,  95, 232, 254, 254, 246,  77,   2,   0,   0],\n",
-            "        [  0,   0,   0,  39, 217, 254, 254, 184,  25,   0,  34, 175, 251, 254,\n",
-            "         255, 254, 250,  82, 128, 221, 253, 255, 252, 177,   8,   0,   0,   0],\n",
-            "        [  0,   0,   0, 115, 245, 254, 254, 217,  37,   9, 175, 251, 254, 255,\n",
-            "         255, 255, 254, 251, 254, 254, 254, 254, 232, 109,   0,   0,   0,   0],\n",
-            "        [  0,   0,   1, 157, 251, 254, 255, 217,  40,  77, 246, 254, 255, 255,\n",
-            "         255, 255, 255, 255, 255, 255, 254, 242, 131,  22,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  94, 234, 254, 255, 218,  50, 140, 254, 254, 255, 255,\n",
-            "         255, 255, 255, 255, 255, 254, 252, 131,  32,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  21, 172, 252, 255, 249, 227, 247, 254, 253, 239, 248,\n",
-            "         254, 255, 255, 255, 254, 253, 207,   9,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  10, 142, 251, 255, 254, 254, 254, 254, 234, 116, 165,\n",
-            "         253, 254, 255, 255, 254, 234,  95,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  32, 203, 254, 255, 255, 255, 254, 253, 202,  35,  37,\n",
-            "         235, 254, 255, 255, 254, 217,  39,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  37, 217, 254, 255, 255, 255, 254, 221,  91,   7,  21,\n",
-            "         234, 254, 255, 255, 254, 215,  37,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  37, 217, 254, 255, 255, 254, 254, 115,   4,   0,  32,\n",
-            "         245, 254, 255, 254, 246, 127,   8,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  37, 217, 254, 255, 255, 254, 244,  46,   0,   0,   9,\n",
-            "         222, 254, 255, 254, 208,  46,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  37, 217, 254, 255, 255, 252, 177,   7,   0,   0,   4,\n",
-            "         217, 254, 255, 250, 140,   9,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  37, 217, 254, 255, 254, 245, 114,   0,   0,   0,   4,\n",
-            "         217, 254, 255, 233,  82,   2,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  37, 217, 254, 255, 254, 220,  50,   0,   0,   0,   4,\n",
-            "         217, 254, 254, 217,  39,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  37, 217, 254, 255, 247, 159,  20,   0,   0,   0,   4,\n",
-            "         203, 254, 254, 203,  32,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  82, 233, 254, 254, 216,  38,   0,   0,   0,   0,   0,\n",
-            "         115, 240, 233, 110,   4,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0, 125, 249, 254, 254, 170,  21,   0,   0,   0,   0,   0,\n",
-            "          32, 111,  82,  18,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0, 114, 245, 254, 251,  83,   3,   0,   0,   0,   0,   0,\n",
-            "           0,   3,   2,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,  20, 109, 127, 113,   7,   0,   0,   0,   0,   0,   0,\n",
-            "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,   0,   3,   4,   4,   0,   0,   0,   0,   0,   0,   0,\n",
-            "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-            "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-            "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0]])\n",
-            "torch.Size([28, 28])\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'print(tr_images)\\nprint(tr_images.size())\\nprint(tr_images[0])\\nprint(tr_images[0].size())'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     },
@@ -328,7 +244,7 @@
       ],
       "metadata": {
         "id": "2QiklEyX8Ac8",
-        "outputId": "c970d741-3661-4beb-ad93-dc5fec8bba2f",
+        "outputId": "32365343-9d2b-4b03-a71e-eeb6f12e3254",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -378,7 +294,7 @@
       ],
       "metadata": {
         "id": "Yoxr6ef7_TZS",
-        "outputId": "37b8b3d5-49ab-47ac-b578-c7d22f6957f5",
+        "outputId": "dd79a5db-7606-4597-ff7e-1030abe5be6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -551,7 +467,7 @@
           "height": 812
         },
         "id": "VT2WVlGzjwxH",
-        "outputId": "35810887-e1d8-4eac-e0df-ec9cfc97f5d2"
+        "outputId": "fb30fce1-e2ed-4298-9a23-c2044ff46d80"
       },
       "execution_count": 6,
       "outputs": [
@@ -607,23 +523,10 @@
         "ts_sample_images, ts_list_centroids_abs, ts_list_centroids_rel = load_sample_images(test_images_bin)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "r2rMMBxwBdot",
-        "outputId": "c0b241bf-a72b-44f9-9956-ecbc31d19283"
+        "id": "r2rMMBxwBdot"
       },
       "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([124800, 28, 28])\n",
-            "25\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -632,7 +535,7 @@
       ],
       "metadata": {
         "id": "rVu4d6qVOTd5",
-        "outputId": "77c8208a-d930-475c-d4ba-7150bcce871b",
+        "outputId": "84750cfc-a63b-4346-b0a9-404fa3bb30ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 406
@@ -672,7 +575,7 @@
       ],
       "metadata": {
         "id": "uGGgy_OfB7p6",
-        "outputId": "012a64dd-6b61-4c6b-a686-826abacd4e79",
+        "outputId": "01157792-902e-4f1e-f1e7-9a3a10749c50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 687
@@ -718,23 +621,10 @@
         "ts_densities, ts_list_densities = load_densities(test_images_bin)"
       ],
       "metadata": {
-        "id": "ERQcbDmlMhB3",
-        "outputId": "e81ace9b-1ea5-4e2b-e0cd-89e8d0e4efca",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ERQcbDmlMhB3"
       },
       "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([124800, 28, 28])\n",
-            "124800\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -743,7 +633,7 @@
       ],
       "metadata": {
         "id": "wGj6QagOOIDm",
-        "outputId": "9b955e34-d4ff-426d-9a48-a8964dffbaf8",
+        "outputId": "4be27d78-943c-40cd-f7bc-e6487d5de0ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 406
@@ -922,7 +812,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 767
         },
-        "outputId": "b7b9e025-59f3-40e9-f1dd-4af15a93aee5"
+        "outputId": "d4546664-05fa-4dc4-cea6-418e4833edc9"
       },
       "execution_count": 12,
       "outputs": [
@@ -1186,7 +1076,7 @@
       "metadata": {
         "id": "Hnwe-aDQrsPv"
       },
-      "execution_count": 24,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1217,27 +1107,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c75367cd-5b30-456e-db1d-6e37076b7013"
+        "outputId": "23fc66a9-073a-4028-edd7-a9525bba80c8"
       },
-      "execution_count": 25,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([22,  6, 15,  ..., 12, 14, 18])\n",
-            "1.0003232955932617\n",
-            "0.7802854776382446\n",
-            "0.6093107461929321\n",
-            "0.4562092423439026\n",
-            "0.3540043532848358\n"
+            "0.6109276413917542\n",
+            "0.7842522263526917\n",
+            "0.5698913335800171\n",
+            "0.6103122234344482\n",
+            "0.5715650916099548\n"
           ]
         }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Test phase"
+      ],
       "metadata": {
         "id": "pLlZ9wtG-SCC"
       }
@@ -1260,40 +1151,66 @@
       ],
       "metadata": {
         "id": "jbnZdOC5-QuL",
-        "outputId": "4e4b4a7f-4bbe-4ec6-adda-fb914978f5a4",
+        "outputId": "c161a576-e475-457a-b00f-54e04c71af41",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy of the model on the test images: 83.36538696289062 %\n"
+            "Accuracy of the model on the test images: 83.31730651855469 %\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "pdb on"
+        "Elia: evaluating the weight of every feature on the accuracy of the network"
       ],
       "metadata": {
-        "id": "aSztbiP4OLVS"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "FnAr2AF4Tg7M"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "pdb off"
+        "#functions for the creation of the different datasets\n",
+        "def dataset_centroids(n_samples, images_centroids):\n",
+        "  dataset_list = []\n",
+        "  for i in range(n_samples):\n",
+        "    list_tmp = []\n",
+        "    for centroid in images_centroids[i]:\n",
+        "        list_tmp.append(normalize(centroid[0], min_x_coordinates, max_x_coordinates))\n",
+        "        list_tmp.append(normalize(centroid[1], min_y_coordinates, max_y_coordinates))\n",
+        "\n",
+        "    dataset_list.append(list_tmp)\n",
+        "\n",
+        "  return torch.tensor(dataset_list)\n",
+        "\n",
+        "def dataset_density(n_samples,density_values):\n",
+        "  dataset_list = []\n",
+        "  for i in range(n_samples):\n",
+        "    list_tmp = []\n",
+        "    for density in density_values[i]:\n",
+        "      list_tmp.append(normalize(density, min_density_value, max_density_value))\n",
+        "\n",
+        "    dataset_list.append(list_tmp)\n",
+        "\n",
+        "  return torch.tensor(dataset_list)\n",
+        "# Define macros.\n",
+        "number_of_features = 151 # 49 x coordinates of the centroid, 49 y coordinates of the centroid, 49 density values, 4 number of inclinations.\n",
+        "number_of_outputs = 26 # Output letters of the alphabet.\n",
+        "\n",
+        "# Intialize NN, loss function and optimizer\n",
+        "NN = NeuralNetwork(number_of_features, number_of_outputs)"
       ],
       "metadata": {
-        "id": "hfRnQsXbP1gV"
+        "id": "Q7Veu1jXTftW"
       },
       "execution_count": null,
       "outputs": []
