Add test on 10 different NNs with different weights initialization. Solve an error on partial dataset learning,

--- a/AI_project.ipynb
+++ b/AI_project.ipynb
@@ -30,7 +30,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "NLSwyNFwHXUQ",
-        "outputId": "76153847-70bf-4144-b359-eb79f096f7d7",
+        "outputId": "b2739daf-b08a-44fa-d359-d2453bdf1d85",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -42,7 +42,7 @@
           "text": [
             "Collecting torchmetrics\n",
             "  Downloading torchmetrics-1.2.0-py3-none-any.whl (805 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m805.2/805.2 kB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m805.2/805.2 kB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy>1.20.0 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (1.23.5)\n",
             "Requirement already satisfied: torch>=1.8.1 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (2.0.1+cu118)\n",
             "Collecting lightning-utilities>=0.8.0 (from torchmetrics)\n",
@@ -162,7 +162,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 542
         },
-        "outputId": "bb3e3c4b-f9fe-47bb-b3a3-1b438f035e5a"
+        "outputId": "b7840a7a-1b27-45dc-c788-d8f479147c97"
       },
       "execution_count": 2,
       "outputs": [
@@ -177,7 +177,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 561753746/561753746 [00:29<00:00, 19116417.41it/s]\n"
+            "100%|██████████| 561753746/561753746 [00:11<00:00, 50153509.46it/s]\n"
           ]
         },
         {
@@ -232,7 +232,7 @@
       ],
       "metadata": {
         "id": "tNqiXFct9jI_",
-        "outputId": "ebbe848d-e963-4986-d3f2-a914634a081d",
+        "outputId": "e88e5446-9b2f-4669-8fc2-92b9c90234a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -269,7 +269,7 @@
       ],
       "metadata": {
         "id": "2QiklEyX8Ac8",
-        "outputId": "4da7892e-3666-4791-ef09-3d8d144d8789",
+        "outputId": "160a1173-f82e-4371-cecd-e07bf560e1b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -323,7 +323,7 @@
       ],
       "metadata": {
         "id": "Yoxr6ef7_TZS",
-        "outputId": "18e2ff0f-e9fa-469f-fb30-a0137be8646a",
+        "outputId": "92c324d0-4ac4-44a1-98e2-bdaed8dda6f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
@@ -503,7 +503,7 @@
           "height": 86
         },
         "id": "VT2WVlGzjwxH",
-        "outputId": "6eef4c2a-2f5c-4012-a274-4aa0bd33f53c"
+        "outputId": "f977c3b8-e1c4-42be-c6ad-a974a4e28b47"
       },
       "execution_count": 6,
       "outputs": [
@@ -540,7 +540,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "5215b9d4-3b3a-4032-bd6e-e66b19e57a07"
+        "outputId": "d7ed9363-9a3b-4285-8bc8-15cf833d95c2"
       },
       "execution_count": 7,
       "outputs": [
@@ -583,7 +583,7 @@
       ],
       "metadata": {
         "id": "uGGgy_OfB7p6",
-        "outputId": "0a1982d4-0dee-45d0-e177-637aa46ef8be",
+        "outputId": "770faa4f-bccf-49fd-8dab-b1034963875d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -627,7 +627,7 @@
       ],
       "metadata": {
         "id": "ERQcbDmlMhB3",
-        "outputId": "d7028ca9-bffb-4937-b2ea-c2babdf835b8",
+        "outputId": "de435349-ff99-4db0-99c8-3694c6f6c921",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -661,7 +661,7 @@
       ],
       "metadata": {
         "id": "wGj6QagOOIDm",
-        "outputId": "0bb26c4b-2621-4007-c8d5-fe0e92826944",
+        "outputId": "453a133b-18b6-48f2-aa7c-b8045f24396b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -842,7 +842,7 @@
       ],
       "metadata": {
         "id": "iSSjZvvRCUR8",
-        "outputId": "6065e89d-cb75-40b3-9cf9-8f03d78ac850",
+        "outputId": "107423b7-2ccf-4743-9e32-3277b6c8346b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
@@ -933,7 +933,7 @@
       ],
       "metadata": {
         "id": "a6wYHSlW6TIi",
-        "outputId": "71f5acab-26bd-4b7d-8997-eee6ec324ee6",
+        "outputId": "14532c85-0cdd-4c27-e354-fa2b482d7e2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
@@ -1076,16 +1076,47 @@
         "number_of_features = 151 # 49 x coordinates of the centroid, 49 y coordinates of the centroid, 49 density values, 4 number of inclinations.\n",
         "number_of_outputs = 26 # Output letters of the alphabet.\n",
         "\n",
+        "\n",
+        "n_NNs = 10\n",
+        "list_NNs = []\n",
+        "list_criterions = []\n",
+        "list_optimizers = []\n",
+        "for i in range(n_NNs):\n",
+        "  list_NNs.append(NeuralNetwork(number_of_features, number_of_outputs))\n",
+        "  list_criterions.append(nn.NLLLoss())\n",
+        "  list_optimizers.append(optim.Adam(list_NNs[i].parameters(), lr=0.001))\n",
+        "\n",
+        "'''\n",
         "# Intialize NN, loss function and optimizer\n",
         "NN = NeuralNetwork(number_of_features, number_of_outputs)\n",
         "criterion = nn.NLLLoss()\n",
-        "optimizer = optim.Adam(NN.parameters(), lr = 0.001)"
+        "optimizer = optim.Adam(NN.parameters(), lr = 0.001)\n",
+        "'''"
       ],
       "metadata": {
-        "id": "KNvh-lr3onFu"
+        "id": "KNvh-lr3onFu",
+        "outputId": "af95a401-7fe6-47f6-e384-595e30dcb360",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "execution_count": 14,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\n# Intialize NN, loss function and optimizer\\nNN = NeuralNetwork(number_of_features, number_of_outputs)\\ncriterion = nn.NLLLoss()\\noptimizer = optim.Adam(NN.parameters(), lr = 0.001)\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1158,7 +1189,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "c62b9d8c-9795-4a40-e165-c747759176e8"
+        "outputId": "14b8461b-fa26-49e0-ad6e-140e4e9702d5"
       },
       "execution_count": 15,
       "outputs": [
@@ -1198,7 +1229,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ztkp0RIqV6Gj",
-        "outputId": "ea9ad9d3-8f0f-4119-caf1-3977e2cc1329"
+        "outputId": "ff2631ce-4822-43ef-c5b7-8be4c13cac04"
       },
       "execution_count": 16,
       "outputs": [
@@ -1247,12 +1278,13 @@
         "        optimizer.step() # Update Weights\n",
         "    print(loss.item()) # print loss for each epoch\"\"\"\n",
         "\n",
-        "dct_losses = NN.train_model(trainloader, 5, criterion, optimizer)\n",
-        "print(dct_losses)"
+        "for i in range(n_NNs):\n",
+        "  dct_losses = list_NNs[i].train_model(trainloader, 5, list_criterions[i], list_optimizers[i])\n",
+        "  print(dct_losses)"
       ],
       "metadata": {
         "id": "ad_bUQQMr-ld",
-        "outputId": "3fdc905a-a31c-4f22-e59f-8f8353899360",
+        "outputId": "4172536e-285d-4ccb-bf7e-1b0c4fce6c3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1263,7 +1295,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{0: 0.7223410606384277, 1: 0.5496722459793091, 2: 0.713081955909729, 3: 0.36507290601730347, 4: 0.33999958634376526}\n"
+            "{0: 0.6742390990257263, 1: 0.698298990726471, 2: 0.4714203476905823, 3: 0.35030704736709595, 4: 0.48766791820526123}\n",
+            "{0: 0.6732256412506104, 1: 1.0825400352478027, 2: 0.5877388715744019, 3: 0.7531075477600098, 4: 0.49411818385124207}\n",
+            "{0: 0.8420532941818237, 1: 0.5420111417770386, 2: 0.6769485473632812, 3: 0.39827588200569153, 4: 0.43826043605804443}\n",
+            "{0: 1.0972572565078735, 1: 0.7412747740745544, 2: 1.0248445272445679, 3: 0.2207665592432022, 4: 0.344963937997818}\n",
+            "{0: 0.6978217959403992, 1: 0.8925826549530029, 2: 0.3046994209289551, 3: 0.6388100981712341, 4: 0.6012586951255798}\n",
+            "{0: 0.7619310617446899, 1: 0.7121996879577637, 2: 0.4906885623931885, 3: 0.3763148784637451, 4: 0.49729713797569275}\n",
+            "{0: 0.8143930435180664, 1: 0.8025861382484436, 2: 0.7147517800331116, 3: 0.4924941956996918, 4: 0.4647083282470703}\n",
+            "{0: 0.8295206427574158, 1: 0.564988374710083, 2: 0.2769158184528351, 3: 0.2871969938278198, 4: 0.4950115978717804}\n",
+            "{0: 0.5976386666297913, 1: 0.7160224914550781, 2: 0.40895989537239075, 3: 0.43795207142829895, 4: 0.49563294649124146}\n",
+            "{0: 0.6899325847625732, 1: 0.5777256488800049, 2: 0.4616498053073883, 3: 0.5464844107627869, 4: 0.45972537994384766}\n"
           ]
         }
       ]
@@ -1293,12 +1334,13 @@
         "    print('Accuracy of the model on the test images: {} %'\n",
         "          .format(100.0 * correct / total))\"\"\"\n",
         "\n",
-        "accuracy =  NN.test_model(testloader)\n",
-        "print(f\"Accuracy of the model on the test images: {accuracy * 100} %\")"
+        "for i in range(n_NNs):\n",
+        "  accuracy = list_NNs[i].test_model(testloader)\n",
+        "  print(f\"Accuracy of the model on the test images: {accuracy * 100} %\")"
       ],
       "metadata": {
         "id": "jbnZdOC5-QuL",
-        "outputId": "9cb264bb-4c7e-4efc-91a4-8d30f1d31654",
+        "outputId": "172787ee-8bb8-451b-be55-ba0c1e023bd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1309,7 +1351,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy of the model on the test images: 84.04327392578125 %\n"
+            "Accuracy of the model on the test images: 83.3125 %\n",
+            "Accuracy of the model on the test images: 84.1394271850586 %\n",
+            "Accuracy of the model on the test images: 84.40865325927734 %\n",
+            "Accuracy of the model on the test images: 84.55769348144531 %\n",
+            "Accuracy of the model on the test images: 84.04327392578125 %\n",
+            "Accuracy of the model on the test images: 84.09615325927734 %\n",
+            "Accuracy of the model on the test images: 84.14422607421875 %\n",
+            "Accuracy of the model on the test images: 84.34615325927734 %\n",
+            "Accuracy of the model on the test images: 83.76923370361328 %\n",
+            "Accuracy of the model on the test images: 84.14904022216797 %\n"
           ]
         }
       ]
@@ -1369,7 +1420,7 @@
         "\n",
         "NN_2 = NeuralNetwork(number_of_features, number_of_outputs)\n",
         "criterion = nn.NLLLoss()\n",
-        "optimizer = optim.Adam(NN.parameters(), lr = 0.001)\n",
+        "optimizer = optim.Adam(NN_2.parameters(), lr = 0.001)\n",
         "\n",
         "dct_losses = NN_2.train_model(trainloader, 5, criterion, optimizer)\n",
         "print(dct_losses)\n",
@@ -1382,7 +1433,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PVD3prjzXAvV",
-        "outputId": "470a8a12-06a4-44b5-f125-e5d7eec1c1be"
+        "outputId": "b64f711d-151f-4aa0-aa92-bcdc56690147"
       },
       "execution_count": 20,
       "outputs": [
@@ -1394,8 +1445,8 @@
             "Labels size:  torch.Size([124800])\n",
             "New features shape:  torch.Size([2600, 151])\n",
             "New labels shape:  torch.Size([2600])\n",
-            "{0: 4.434182167053223, 1: 3.956879138946533, 2: 4.510941982269287, 3: 4.326128005981445, 4: 4.081406593322754}\n",
-            "Accuracy of the model on the test images: 3.254807710647583 %\n"
+            "{0: 2.8708012104034424, 1: 3.1303648948669434, 2: 2.4786157608032227, 3: 2.2581026554107666, 4: 2.001250743865967}\n",
+            "Accuracy of the model on the test images: 38.4375 %\n"
           ]
         }
       ]
@@ -1418,7 +1469,7 @@
         "\n",
         "NN_3 = NeuralNetwork(number_of_features, number_of_outputs)\n",
         "criterion = nn.NLLLoss()\n",
-        "optimizer = optim.Adam(NN.parameters(), lr = 0.001)\n",
+        "optimizer = optim.Adam(NN_3.parameters(), lr = 0.001)\n",
         "\n",
         "dct_losses = NN_3.train_model(trainloader, 5, criterion, optimizer)\n",
         "print(dct_losses)\n",
@@ -1431,7 +1482,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SpCGEOwdXgHa",
-        "outputId": "0a00d2d9-ad85-42e1-d1ac-f1f38d8b4e76"
+        "outputId": "c0355aab-a5fd-4e04-bc39-01094eb2e80e"
       },
       "execution_count": 21,
       "outputs": [
@@ -1443,8 +1494,8 @@
             "Labels size:  torch.Size([124800])\n",
             "New features shape:  torch.Size([26000, 151])\n",
             "New labels shape:  torch.Size([26000])\n",
-            "{0: 4.779121398925781, 1: 5.414198875427246, 2: 4.58271598815918, 3: 5.0061869621276855, 4: 3.983499526977539}\n",
-            "Accuracy of the model on the test images: 4.774038314819336 %\n"
+            "{0: 1.562049150466919, 1: 1.203690767288208, 2: 1.3757511377334595, 3: 1.1929726600646973, 4: 0.8200694918632507}\n",
+            "Accuracy of the model on the test images: 74.3125 %\n"
           ]
         }
       ]
@@ -1467,7 +1518,7 @@
         "\n",
         "NN_4 = NeuralNetwork(number_of_features, number_of_outputs)\n",
         "criterion = nn.NLLLoss()\n",
-        "optimizer = optim.Adam(NN.parameters(), lr = 0.001)\n",
+        "optimizer = optim.Adam(NN_4.parameters(), lr = 0.001)\n",
         "\n",
         "dct_losses = NN_4.train_model(trainloader, 5, criterion, optimizer)\n",
         "print(dct_losses)\n",
@@ -1480,7 +1531,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-vMguye5XlkE",
-        "outputId": "388dbcbb-96cc-430d-97be-335110e35e87"
+        "outputId": "e95e3ad9-21e8-4a2b-ff5c-0f9892b0a5da"
       },
       "execution_count": 22,
       "outputs": [
@@ -1492,8 +1543,8 @@
             "Labels size:  torch.Size([124800])\n",
             "New features shape:  torch.Size([62400, 151])\n",
             "New labels shape:  torch.Size([62400])\n",
-            "{0: 5.186417579650879, 1: 5.098629951477051, 2: 4.989724159240723, 3: 5.351496696472168, 4: 5.522019863128662}\n",
-            "Accuracy of the model on the test images: 3.350961685180664 %\n"
+            "{0: 1.1425715684890747, 1: 0.7055071592330933, 2: 0.6067015528678894, 3: 0.5949466228485107, 4: 0.6680886745452881}\n",
+            "Accuracy of the model on the test images: 80.97595977783203 %\n"
           ]
         }
       ]
@@ -1516,7 +1567,7 @@
         "\n",
         "NN_5 = NeuralNetwork(number_of_features, number_of_outputs)\n",
         "criterion = nn.NLLLoss()\n",
-        "optimizer = optim.Adam(NN.parameters(), lr = 0.001)\n",
+        "optimizer = optim.Adam(NN_5.parameters(), lr = 0.001)\n",
         "\n",
         "dct_losses = NN_5.train_model(trainloader, 5, criterion, optimizer)\n",
         "print(dct_losses)\n",
@@ -1529,7 +1580,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w9AO08t0XoIF",
-        "outputId": "1c7f44d9-0db9-48fd-ca4d-7ed6ddce1da5"
+        "outputId": "b8aa8479-b6d2-4b58-9505-d1877fc7800b"
       },
       "execution_count": 23,
       "outputs": [
@@ -1541,8 +1592,8 @@
             "Labels size:  torch.Size([124800])\n",
             "New features shape:  torch.Size([93600, 151])\n",
             "New labels shape:  torch.Size([93600])\n",
-            "{0: 4.603829383850098, 1: 4.1873579025268555, 2: 4.752658367156982, 3: 4.813521385192871, 4: 4.720804691314697}\n",
-            "Accuracy of the model on the test images: 5.706730842590332 %\n"
+            "{0: 0.7991190552711487, 1: 0.6662347912788391, 2: 0.7558531165122986, 3: 0.6026703119277954, 4: 0.3461601734161377}\n",
+            "Accuracy of the model on the test images: 82.84615325927734 %\n"
           ]
         }
       ]
@@ -1704,7 +1755,7 @@
       ],
       "metadata": {
         "id": "KuL561zeTWl6",
-        "outputId": "5e721060-df9a-44f0-8fd3-894f07527d39",
+        "outputId": "d84740e1-e107-41b0-93ff-956a594d2d75",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 242
